2008-04-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: Documentation update.
	
	* src/forcefield.cpp: Fixed (X, Y, Z, XYZ) atoms are now checked in
	SteepestDescent and ConjugateGradients and works.
	Enable constraints again. Distance and angles work, torsion still
	needs some attention.

2008-04-21  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/obconversion.h: Moved the Formatpos typedef
	outside of the class in order to preserve old API call.

2008-04-21 Chris Morley

	* include/openbabel/obconversion.h, src/obconversion.cpp:
	Reinstate a version of OBConversion::GetNextFormat() to prevent
	breaking xchemdraw. Formatpos is defined differently but would
	not be accessed in an application program.

	NEWS, windows-vc2005/OBPythonOBF/Readme.txt:
	Minor documentation changes

2008-04-19  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Added
	SetupPointer. Added Framework for specifying groups using OBBitVec for
	now until we have OBGroup/OBFragment. Documentation example using
	groups. 
	The *RotorSearch functions should call SetupPointers when they change
	conformer. This will update the pointers to the atom positions in the
	OBFFCalculation(s). This solves some weird results when the rotor
	search functions were used with MMFF94 or ghemical. UFF doesn't have
	this problem because it still uses the vector3 class.

	* src/forcefields/forcefieldmmff94.*: Added SetupPointer.
	SetupCalculations() now checks the intra and inter groups.

	* src/forcefields/forcefieldghemical.*: Added SetupPointer.

2008-04-19  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp,
	include/openbabel/griddata.h, src/griddata.cpp: Now using std::vector
	to store data internally. Made safer where possible.

	* src/formats/gausscubeformat.cpp: Cleaned up support for reading in
	multiple cubes - large cube files can now be read in.
